[package]
name = "rust-docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]


[dependencies]
# reqwest = {version = "0.11.12", default-features = false, features = ["rustls-tls"]}